2013-04-12 belangeo <belangeo@gmail.com>

    * Added new object: SVF, State Variable Filter with continuous filter type change.
    - rev 1089

2013-10-11 belangeo <belangeo@gmail.com>

    * Added a setStealing() method to the Notein object.
    - rev 1087

2013-10-10 belangeo <belangeo@gmail.com>

    * Added a reset() method to the PyoTableObject.
    - rev 1086

2013-03-08 belangeo <belangeo@gmail.com>

    * Added new object: Yin, pitch tracker using the Yin algorithm.
    - rev 1084

2013-03-01 belangeo <belangeo@gmail.com>

    * Graphical display of NewMatrix object now updates in real-time.
    - rev 1082

2013-02-28 belangeo <belangeo@gmail.com>

    * Graphical display of table objects now updates in real-time.
    - rev 1080

-------------------------------------------------------------------------------------

2013-02-17 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.4.
    - rev 1078

2013-02-13 belangeo <belangeo@gmail.com>

    * Added pyo.USE_DOUBLE constant. 'import pyo' sets this constant to 0 and 'import pyo64' sets it to 1
    - rev 1073

2013-01-21 belangeo <belangeo@gmail.com>

    * Added __del__ method to the Server object with checks and necessary actions if the server is already started and/or booted.
    - rev 1065

2013-01-11 belangeo <belangeo@gmail.com>

    * Added new object: RCOsc. Waveform aproximation of a RC circuit.
    - rev 1063

2013-01-07 belangeo <belangeo@gmail.com>

    * Added new operators on To PyoObject. **, %, - (negative) and comparison operators.
    - rev 1062

2012-12-25 belangeo <belangeo@gmail.com>

    * Added new object: Delay1. Delays a signal by one sample.
    - rev 1058

2012-12-19 belangeo <belangeo@gmail.com>

    * Added new objects: Min and Max. Outputs minimum or maximum between two values.
    - rev 1049

2012-12-19 belangeo <belangeo@gmail.com>

    * Added a template for extending pyo with custom objects.
    - rev 1047

2012-12-18 belangeo <belangeo@gmail.com>
