@@ -2310,6 +2310,7 @@ init_pyo64(void)
     module_add_object(m, "RCOsc_base", &RCOscType);
     module_add_object(m, "Yin_base", &YinType);
     module_add_object(m, "SVF_base", &SVFType);
+    module_add_object(m, "Average_base", &AverageType);
 
     PyModule_AddStringConstant(m, "PYO_VERSION", PYO_VERSION);
 #ifdef COMPILE_EXTERNALS
